force-app/main/default/objects/leankor__ActivityTracker__c/leankor__ActivityTracker__c.object-meta.xml
<CustomObject>
    <description>Contains history of activities made by users within a board.</description>
    <label>Activity Tracker</label>
    <nameField>
        <displayFormat>ATR-{0000000000}</displayFormat>
        <label>Activity Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>