force-app/main/default/objects/leankor__ActivityTracker__c/fields/leankor__ActivityDateTime__c.field-meta.xml
<CustomField>
    <fullName>leankor__ActivityDateTime__c</fullName>
    <description>Date and time when the activity is performed.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date and time when the activity is performed.</inlineHelpText>
    <label>Activity Date Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>