force-app/main/default/objects/leankor__ActivityTracker__c/fields/leankor__ActivityDetail__c.field-meta.xml
<CustomField>
    <fullName>leankor__ActivityDetail__c</fullName>
    <description>Detail of the activity.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Detail of the activity.</inlineHelpText>
    <label>Activity Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>