force-app/main/default/objects/leankor__ActivityTracker__c/fields/leankor__ActivitySource__c.field-meta.xml
<CustomField>
    <fullName>leankor__ActivitySource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who performed the activity.</description>
    <inlineHelpText>User who performed the activity.</inlineHelpText>
    <label>Activity Source</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ActivityTrackers_User</relationshipName>
    <type>Lookup</type>
</CustomField>