force-app/main/default/objects/leankor__ActivityTracker__c/fields/leankor__ActivityVerb__c.field-meta.xml
<CustomField>
    <fullName>leankor__ActivityVerb__c</fullName>
    <description>Type of activity performed.</description>
    <inlineHelpText>Type of activity performed.</inlineHelpText>
    <label>Activity Verb</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CreateKanbanCard</fullName>
            </value>
            <value>
                <fullName>MoveKanbanCard</fullName>
            </value>
            <value>
                <fullName>OpenValueStream</fullName>
            </value>
            <value>
                <fullName>UpdateKanbanCard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>