force-app/main/default/objects/leankor__ActivityTracker__c/fields/leankor__KanbanCard__c.field-meta.xml
<CustomField>
    <fullName>leankor__KanbanCard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The item in which the activity is performed.</description>
    <inlineHelpText>The item in which the activity is performed.</inlineHelpText>
    <label>Kanban Card</label>
    <referenceTo>leankor__KanbanCard__c</referenceTo>
    <relationshipLabel>Activity Trackers</relationshipLabel>
    <relationshipName>ActivityTrackers_KanbanCard</relationshipName>
    <type>Lookup</type>
</CustomField>