force-app/main/default/objects/leankor__ActivityTracker__c/fields/leankor__ValueStream__c.field-meta.xml
<CustomField>
    <fullName>leankor__ValueStream__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The board in which the activity is performed.</description>
    <inlineHelpText>The board in which the activity is performed.</inlineHelpText>
    <label>Value Stream</label>
    <referenceTo>leankor__ValueStream__c</referenceTo>
    <relationshipLabel>Activity Trackers</relationshipLabel>
    <relationshipName>ActivityTrackers_ValueStream</relationshipName>
    <type>Lookup</type>
</CustomField>